@@ -14,7 +14,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -164,9 +164,9 @@ public class HearingService {
 
             List<CaseLinkDetails> linkDetails = caseLinkInfo.getLinkDetails();
 
-            if (!linkDetails.isEmpty() && !linkDetails.get(0).getReasons().isEmpty()) {
+            if (!linkDetails.isEmpty() && !linkDetails.getFirst().getReasons().isEmpty()) {
 
-                CaseLinkDetails caseLinkDetails = linkDetails.get(0);
+                CaseLinkDetails caseLinkDetails = linkDetails.getFirst();
 
                 List<String> reasonList =
                     caseLinkDetails.getReasons().stream()
